fix: size svgs in breadcrumb-collapsed utility

--- a/packages/ui/src/css/breadcrumb.css
+++ b/packages/ui/src/css/breadcrumb.css
@@ -33,5 +33,7 @@
 @utility breadcrumb-collapsed {
   @layer l1.l2 {
     @apply flex size-9 items-center justify-center;
+    @apply [&_svg:not([class*='size-'])]:size-3.5 [&_svg]:shrink-0;
+    @apply [&_i[class*='ri-']]:text-base [&_i[class*='ri-']]:leading-none [&_i[class*='ri-']]:shrink-0;
   }
 }
